<resources>
    <string name="app_name">Map Application</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="profile_fragment">Profile</string>
    <string name="map_fragment">Map</string>
    <string name="settings_fragment">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="save">Save</string>
    <string name="default_place">Default Place\nFor example Pawn Shop</string>
    <string name="date_default">Apr 01 22:22</string>
    <string name="ok_button">OK</string>
    <string name="version_example">v1.0</string>
    <string name="user_id">User ID</string>
    <string name="user_location">User location</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="no_check_ins">No check ins</string>
    <string name="no_description">No description</string>
    <string name="post_check_in">Post</string>
    <string name="save_check_in">Save</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="account_is_not_created">Email is not correct</string>
    <string name="password_mismatch">Password is not correct</string>
    <string name="location_image_description">Location image</string>
    <string name="more_button_description">More</string>
</resources>