<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="fragments.CreateAccountFragment">


    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/create_account" />

</androidx.appcompat.widget.LinearLayoutCompat>