<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".auth.EditProfileFragment" >

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username" />

        <Button
        android:id="@+id/save_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/save" />

</LinearLayout>