<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".auth.ChangePasswordFragment" >

    <EditText
        android:id="@+id/old_password_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAllCaps="false" />

</LinearLayout>