<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_default_place_icon"
        android:contentDescription="@string/location_image_description"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <ImageButton
        android:id="@+id/more_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_more"
        android:contentDescription="@string/more_button_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_place"
        android:textSize="14sp"
        android:maxLines="2"
        android:paddingTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/more_button"
        app:layout_constraintStart_toEndOf="@+id/location_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_default"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/more_button"
        app:layout_constraintStart_toEndOf="@+id/location_icon"
        app:layout_constraintTop_toBottomOf="@id/location_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="more_button, location_icon, date_text_view"
        app:barrierDirection="bottom"
        />


</androidx.constraintlayout.widget.ConstraintLayout>