<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkins.CheckInListFragment">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_default_profile_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toTopOf="@id/user_image" />

    <TextView
        android:id="@+id/userid"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <TextView
        android:id="@+id/user_location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/user_location"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toBottomOf="@id/userid" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checkinsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        tools:listitem="@layout/item_check_in" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/no_check_ins_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_check_ins"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/new_check_in_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_new_check_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>