<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkins.CheckInDetailsFragment"
    android:orientation="vertical"
    android:gravity="center" >

    <!--
        TODO map settings
    -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:cameraZoom="13"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="4dp"
            android:src="@drawable/ic_default_place_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:paddingTop="4dp"
            android:text="@string/default_place"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_default"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/location_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location_icon"
            app:layout_constraintTop_toBottomOf="@+id/location_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_icon"
            android:text="@string/no_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.appcompat.widget.LinearLayoutCompat>